Fixed gradient overflowing the page on mobile.

--- a/styles/gradient.css
+++ b/styles/gradient.css
@@ -20,15 +20,21 @@
     z-index:-1;
     
     --size: 700px;
-    --speed: 50s;
+    --speed: 10s;
     --easing: cubic-bezier(0.8, 0.2, 0.2, 0.8);
-    width: clamp(var(--size), var(--size), 100%);
-    height: clamp(var(--size), var(--size), 100%);
+    width: clamp(var(--size), var(--size), 100vw);
+    height: clamp(var(--size), var(--size), 100vh);
     filter: blur(calc(var(--size) / 5));
     background-image: linear-gradient(#37eba9, #5b37eb);
-    animation: rotate var(--speed) var(--easing) alternate infinite;
+    animation:rotate var(--speed) var(--easing) alternate infinite;
     border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
 }
+@media (max-width: 720px) {
+    .gradient {
+        --size:600px;
+    }
+}
+
 /* This is just to transition when you change the viewport size. */
 * {
     transition: all 0.25s ease-out;
